examples/Failing/Variables/lvalue_fail3.c
int main() {
    int vs = 5;
    /vs = 6;
}
